--- a/docs/case_study/introduction.ipynb
+++ b/docs/case_study/introduction.ipynb
@@ -30,18 +30,16 @@
     "```\n",
     "\n",
     "\n",
-    "This chapter summarizes the work completed by Mira Geoscience to validate the algorithms and inversion codes developed during the Accelerated Development project for Vale S.A.\n",
-    "\n",
-    "After consulting with Vale's exploration team, the decision was made to focus on a southern portion of Carajas-Block 3 site. Several surveys have been flown over the area to help delineate known ore deposits and to identify potential extension zones.\n",
+    "This chapter demonstrates standalone and joint inversions of geophysical data over a synthetic model of the Flin Flon nickel deposit. We simulated several surveys over the area to help delineate the ore deposits.\n",
     "The goal is to use airborne geophysics to characterize the physical property and shape of the ore body and host rocks. This case study focuses on the following three datasets and respective physical properties:\n",
     "\n",
-    "- [Time-domain EM (HeliTEM)](atem-data) -> resistivity\n",
+    "- [Direct-current resistivity (DCR)](dc-data) -> resistivity\n",
     "- [Magnetic Total Field (TMI)](magnetic-data) -> magnetization\n",
     "- [Full-tensor gravity gradiometry (FTG)](ftg-data) -> density\n",
     "\n",
-    "The datasets were first inverted independently ([Figure 1](standalone)), then jointly with a cross-gradient coupling constraint ([Figure 2](joint)).\n",
+    "The datasets are first inverted independently ([Figure 1](standalone)), then jointly with a cross-gradient coupling constraint ([Figure 2](joint)).\n",
     "\n",
-    "The following sections provide details about the processing and results. A compilation `geoh5` project can be found [here](https://mirageoscience-my.sharepoint.com/:u:/p/dominiquef/ETI3rho9sdVIqvYoAclE-xMBxrrieDzf0oF6gJIyCzlkxQ?e=yaJ6ry)\n",
+    "The following sections provide details about the processing and results. A compilation `geoh5` project can be found [here]()\n",
     "\n",
     "- [Background information](background.ipynb)\n",
     "- [Data](data.ipynb)\n",
@@ -67,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
