--- a/docs/case_study/background.ipynb
+++ b/docs/case_study/background.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5d33bd04",
    "metadata": {},
@@ -9,40 +10,44 @@
     "\n",
     "# Background\n",
     "\n",
-    "The processing and inversion work focuses on airborne datasets acquired over the Carajas - Block 3 area ([Figure 3](global_map)). The region contains several iron-ore deposits currently exploited by Vale. This case study focuses on the southern portion of Block 3, over a known ore body currently under investigation by the exploration team.\n",
+    "The processing and inversion work focuses on ground and airborne datasets simulated over the Flin Flon model ([Figure 3](global_map)). Extensive drilling has been done over the deposit, as shown in [Figure 3](global_map).\n",
     "\n",
-    "```{figure} ./images/map_carajas.png\n",
+    "```{figure} ./images/map_flinflon.png\n",
     "---\n",
     "height: 400px\n",
     "name: global_map\n",
     "---\n",
-    "Satellite image over the Carajas - Block 3 area. Flight lines (black) of the HeliTEM survey and outline of the expected jaspelite (blue) and hematite (red) ore bodies are shown for reference.\n",
+    "Geological map and drillholes of the Flin Flon deposit. Outline of the main ore body (red) is shown for reference.\n",
     "```\n",
     "\n",
-    "Limited drilling has been done over the Western half of the deposit, as shown in [Figure 4](ore_body).\n",
-    "The iron formation is made up of units ranging from jaspelite (JP) in variable degree of alteration (supergene alteration) to compact hematite (HC) and friable hematite (HF) units. On the top of it, there is the occurrence of the extreme alteration product of the iron body, forming an iron crust, called \"structural canga\" (CE). For Vale, the iron ore is composed by HF and CE units. The whole iron formation is hosted in a mafic unit, also with variable degree of supergene alteration, which is composed by the non-alterated mafic (MS), semi-decomposed mafic (MSD) and decomposed mafic (MD).\n",
+    "The synthetic block model was generated from open-source data made available by [Natural Resouces Canada (NRCan)](https://ostrnrcan-dostrncan.canada.ca/entities/publication/73d767d8-ee1c-4bab-a2da-52dcf83faa06). The VMS deposit is hosted in rhyolite unit ...\n",
     "\n",
     "```{figure} ./images/ore_body.png\n",
     "---\n",
     "height: 400px\n",
     "name: ore_body\n",
     "---\n",
-    "Close-up view of the expected ore shell with respect to the drilling data.\n",
+    "Discrete geological model of the ore deposit and host units.\n",
     "```\n",
     "\n",
     " [Table 1](phys_prop) summarizes the relative physical properties of the main rock units in the area.\n",
-    "The iron formation is expected to be more resistive and dense than the host rocks. Although non-alterated mafic rocks are generally magnetic, petrophysical data show that the iron formation in this region is more magnetic than the host rocks. In fact, jaspelite has a higher concentration of magnetite than any other lithology in this area.\n",
-    "\n",
+    "The VMS ore is expected to be more conductive and dense than the host rocks, as well as highly magnetic. This is contrast with the host rhyolite unit with low density, non-magnetic and highly resistive. The background mafic rocks are generally non-magnetic and have moderate densities and resistivities. A thick (40 m) overburden layer of relatively low density and  low resistivity covers the survey area. \n",
     "\n",
     "\n",
     "```{table} Summary of expected physical properties\n",
     ":name: phys_prop\n",
-    "| Unit | Susceptibility | Density | Resistivity |\n",
+    "| Unit | Density (g/cc) | Magnetic Susceptibility (SI) | Resistivity (Ohm.m) |\n",
     "| :--- | :--- | :---- | :---- |\n",
-    "| Jaspelite (JP) |  high    | high      | high     |\n",
-    "| Hematite (HC) |  high    | high      | high     |\n",
-    "| Mafic (MS, MSD) |  moderate    | moderate      | moderate     |\n",
-    "```\n"
+    "| Rhyolite |  low    | low      | high     |\n",
+    "| Chloritic Schist |  moderate    | low      | moderate     |\n",
+    "| Mafic Volcanics |  moderate    | low      | moderate     |\n",
+    "| Mafic Dykes |  moderate    | low      | moderate     |\n",
+    "| Host Mafic |  moderate    | low      | moderate     |\n",
+    "| Basalt |  moderate    | moderate      | low     |\n",
+    "| Ore |  high    | high      | low     |\n",
+    "| Overburden |  low    | low      | moderate     |\n",
+    "| Tailings |  low    | low      | low     |\n",
+    "```"
    ]
   }
  ],
@@ -62,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
