--- a/docs/case_study/data.ipynb
+++ b/docs/case_study/data.ipynb
@@ -9,20 +9,11 @@
     "\n",
     "# Data\n",
     "\n",
-    "This section provides details about the three airborne datasets used in this case study:\n",
+    "This section provides details about the three datasets simulated for this tutorial:\n",
     "\n",
-    "- [Time-domain EM (HeliTEM)](atem-data)\n",
+    "- [Direct-current resistivity (DCR)](dc-data)\n",
     "- [Magnetic total field (HeliTEM)](magnetic-data)\n",
     "- [Airborne full-tensor gravity gradiometry (FTG)](ftg-data)\n",
-    "\n",
-    "Initial datasets provided to Mira covered a large region of approximately $275km^2$ with good overlap between the three blocks. After preliminary analysis, the decision was made to focus the work on the southern portion of Block 3 as shown in [Figure 5](project_area). The area of focus was chosen based on:\n",
-    "\n",
-    " - Overlap with a known but under-explored iron-deposit\n",
-    "\n",
-    " -  Manageable size for processing speed.\n",
-    "\n",
-    " - Limited cultural noise from mine infrastructure nearby.\n",
-    "\n",
     "\n",
     "\n",
     "```{figure} ./images/project_area.png\n",
@@ -30,7 +21,7 @@
     "scale: 50%\n",
     "name: project_area\n",
     "---\n",
-    "Data coverage from the Helitem survey (black) over the zone of interest. Only a subset (red) of the survey was used for the time-domain inversion. \n",
+    "Data coverage for the ground gravity (black), airborne gravity gradiometry (red), airborne magnetics (green) and direct-current (blue) surveys. Outline of the ore shell (gray) is shown for reference. \n",
     "```\n",
     "\n",
     "<p style=\"page-break-after:always;\"></p>"
@@ -41,41 +32,21 @@
    "id": "66f1a8a8",
    "metadata": {},
    "source": [
-    "(atem-data)=\n",
+    "(dc-data)=\n",
     "\n",
-    "## Airborne time-domain EM (TEM)\n",
+    "## Direct-current resistivity (DCR)\n",
     "\n",
-    "An airborne time-domain survey was flown by Xcalibur in late November 2022 over the Carajas region. The survey was flown mostly with parallel lines in the North-South direction spaced 100 m at a nominal clearance of 109 m above ground. East-West tie lines were flown with a spacing of 1 km ([Figure 6](helitem_topo)).\n",
+    "A ground dipole-dipole survey was simulated over the main ore body. The survey was acquired with 40 m dipole length, data measured on sever receivers per transmitter dipole. Line seperation was set to 100 m ([Figure 6](dc_topo)).\n",
     "\n",
-    "```{figure} ./images/Helitem_topo.png\n",
+    "```{figure} ./images/DCR_data.png\n",
     "---\n",
     "scale: 50%\n",
-    "name: helitem_topo\n",
+    "name: dc_topo\n",
     "---\n",
-    "Helitem survey flight lines over Carajas-Block 3 and topography from the SRTM elevation model.\n",
+    "Pseudo-sections of apparent resisitvity and topography from the SRTM elevation model.\n",
     "```\n",
     "\n",
-    "Given the presence of negative transients over a large portion of the survey, only the 15 first time channels were used for modeling ([Figure 7](helitem_data)).\n",
-    "\n",
-    "\n",
-    "\n",
-    "```{figure} ./images/Helitem_data.png\n",
-    "---\n",
-    "scale: 50%\n",
-    "name: helitem_data\n",
-    "---\n",
-    "North-South data profile from the Helitem survey over the known mineralization and mining infrastructure.\n",
-    "```\n",
-    "\n",
-    "The theoretical waveform of the Helitem system was approximated by a semi-rectangular pulse with an 8 msec on-time and 3 msec ramp-off.\n",
-    "\n",
-    "```{figure} ./images/Helitem_waveform.png\n",
-    "---\n",
-    "height: 400px\n",
-    "name: helitem_waveform\n",
-    "---\n",
-    "Idealized waveform used for time-domain modeling. \n",
-    "```\n",
+    "Note the large contrast in apparent resistivity between the western and eastern regions of the survey. This can be explained by a conductive tailing layer West of the deposit.\n",
     "\n",
     "<p style=\"page-break-after:always;\"></p>"
    ]
@@ -87,9 +58,16 @@
    "source": [
     "(magnetic-data)=\n",
     "\n",
-    "## Airborne magnetic survey (MAG)\n",
+    "## Airborne magnetic survey (TMI)\n",
     "\n",
-    "Alongside the EM sensor, the HeliTEM system carries a Scintrex Cesium vapour magnetometer that measures total magnetic field intensity (TMI) as shown below.\n",
+    "We simulated Residual Magnetic Intensity (RMI) data along East-West lines at a 40 m drape height above topography. The line spacing was set to 200 m, along downsampling of 10 m.\n",
+    "\n",
+    "The following inducing field parameters were used for the forward simulation:\n",
+    "\n",
+    "| Intensity | Declination | Inclination |\n",
+    "| :--- | :--- | :---- |\n",
+    "| $60000$ nT |   $11^\\circ$   | $79^\\circ$ |\n",
+    "\n",
     "\n",
     "```{figure} ./images/MAG_data.png\n",
     "---\n",
@@ -99,12 +77,7 @@
     "Residual magnetic intensity (RMI) data measured over the zone of interest.\n",
     "```\n",
     "\n",
-    "\n",
-    "Xcalibur applied a series of corrections and leveling routines on the data to account for diurnal variations, lag and altitude variations. We did not use the altitude corrected data for the inversion in order to preserve the natural fluxations in intensity with respect to distance from the source, which is handled by the physics of the forward simulation. The following inducing field parameters were used for the residual data and modeling:\n",
-    "\n",
-    "| Intensity | Declination | Inclination |\n",
-    "| :--- | :--- | :---- |\n",
-    "| $24950$ nT |   $-20.65^\\circ$   | $-12.39^\\circ$ |\n",
+    "We can notice a strong correlation between the RMI data and the horizontal position of the ore body. \n",
     "\n",
     "<p style=\"page-break-after:always;\"></p>"
    ]
@@ -116,19 +89,38 @@
    "source": [
     "(ftg-data)=\n",
     "\n",
-    "## Airborne full-tensor gravity gradiometry (FTG)\n",
+    "## Airborne tensor gravity gradiometry (FTG)\n",
     "\n",
-    "An airborne fixed-wing full-tensor gravity gradiometry (FTG) survey was flown by Bell Geospace between July and October 2005 over the same area at a 150 m line separation, 100 m nominal flight height.\n",
+    "An airborne fixed-wing full-tensor gravity gradiometry (FTG) survey was simulated at a nominal drape height of 60 m above topography.\n",
     "\n",
-    "The FTG system measures six independent components of the gradient tensor: Txx, Txy, Txz, Tyy, Tyz and Tzz. Data were leveled, free-air and terrain corrected (2.67 g/cc) by the contractor. No additional processing was performed by Mira other than downsampling to 50 m along line.\n",
+    "The FTG system measures six independent components of the gradient tensor: Txx, Txy, Txz, Tyy, Tyz and Tzz. Data were leveled, free-air and terrain corrected with 2.67 g/cc reference density.\n",
     "\n",
     "\n",
-    "```{figure} ./images/FTG_data.png\n",
+    "```{figure} ./images/GG_data.png\n",
     "---\n",
     "scale: 50%\n",
     "name: ftg_data\n",
     "---\n",
     "Components of the gravity gradiometry data measured over the zone of interest (from to bottom): (left) Txx, Tyy and Tzz components, (right) Tyx, Txz and Tyz components.\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf0e0f60",
+   "metadata": {},
+   "source": [
+    "## Ground gravity survey\n",
+    "\n",
+    "A ground gravity survey was simulated on sparsely sampled 200 m grid of stations. The data are provided a terrain corrected with\n",
+    "reference density of 2.67 g/cc.\n",
+    "\n",
+    "```{figure} ./images/GZ_data.png\n",
+    "---\n",
+    "scale: 50%\n",
+    "name: gz_data\n",
+    "---\n",
+    "Vertical component of the gravity field (gz) measured over the zone of interest.\n",
     "```\n"
    ]
   }
@@ -149,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
