--- a/docs/case_study/introduction.ipynb
+++ b/docs/case_study/introduction.ipynb
@@ -30,8 +30,8 @@
     "```\n",
     "\n",
     "\n",
-    "This chapter demonstrates standalone and joint inversions of geophysical data over a synthetic model of the Flin Flon nickel deposit. We simulated several surveys over the area to help delineate the ore deposits.\n",
-    "The goal is to use airborne geophysics to characterize the physical property and shape of the ore body and host rocks. This case study focuses on the following three datasets and respective physical properties:\n",
+    "This chapter demonstrates how to run standalone and joint inversions of geophysical data using SimPEG and the user-interface created for Geoscience ANALYST. We generated several synthetic surveys over the Flin Flon model to simulate an exploration program over a VMS deposit.\n",
+    "The goal is to use ground and airborne geophysics to characterize the physical property and shape of the ore body and host rocks. This case study focuses on the following three datasets and respective physical properties:\n",
     "\n",
     "- [Direct-current resistivity (DCR)](dc-data) -> resistivity\n",
     "- [Magnetic Total Field (TMI)](magnetic-data) -> magnetization\n",
@@ -39,7 +39,7 @@
     "\n",
     "The datasets are first inverted independently ([Figure 1](standalone)), then jointly with a cross-gradient coupling constraint ([Figure 2](joint)).\n",
     "\n",
-    "The following sections provide details about the processing and results. A compilation `geoh5` project can be found [here]()\n",
+    "The following sections provide details about the processing and results. A compilation `geoh5` project can be found in the `simpeg-drivers-assets` folder.\n",
     "\n",
     "- [Background information](background.ipynb)\n",
     "- [Data](data.ipynb)\n",
