--- a/docs/inversion/fundamentals.ipynb
+++ b/docs/inversion/fundamentals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "52181624",
+   "id": "02833ef3",
    "metadata": {},
    "source": [
     "# Inversion Fundamentals\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef3f04d9",
+   "id": "e01d2fb6",
    "metadata": {},
    "source": [
     "## Forward simulation\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c5fd15f",
+   "id": "319ac95d",
    "metadata": {},
    "source": [
     "### Example\n",
@@ -68,11 +68,11 @@
     "\n",
     "or\n",
     "\n",
-    "$$ \n",
+    "$$\n",
     "\\large[\\begin{array}{ccc}\n",
-    "1 & 2 \n",
+    "1 & 2\n",
     "\\end{array}\\large]\\left[\\begin{array}{ccc}\n",
-    "x \\\\ y \n",
+    "x \\\\ y\n",
     "\\end{array}\\right] = d\\;.\n",
     "$$"
    ]
@@ -80,27 +80,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a32ee57b",
+   "id": "1d74e4ae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c9df792",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "F = np.c_[1, 2]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7ac1d96f",
+   "id": "cbbeb497",
    "metadata": {},
    "source": [
-    "For given values for $\\mathbf{m}$, we have a way to compute data $\\mathbf{d}$. For example, for \n",
+    "For given values for $\\mathbf{m}$, we have a way to compute data $\\mathbf{d}$. For example, for\n",
     "$x = 0.5$ and $y=0.25$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99c34a0c",
+   "id": "aea2444f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82534038",
+   "id": "1d679e3b",
    "metadata": {},
    "source": [
     "(inverse_problem)=\n",
@@ -177,34 +186,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23007fd5",
-   "metadata": {},
+   "id": "11685f70",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "### Example\n",
     "\n",
-    "We can re-use the two-parameter problem above to illustrate the inverse problem. We are going to ignore the issue of noise for now and simply look at the under-determined problem\n",
-    "$$ \n",
+    "We can reuse the two-parameter problem above to illustrate the inverse problem. We are going to ignore the issue of noise for now and simply look at the under-determined problem\n",
+    "$$\n",
     "\\large[\\begin{array}{ccc}\n",
-    "1 & 2 \n",
+    "1 & 2\n",
     "\\end{array}\\large]\\left[\\begin{array}{ccc}\n",
-    "x \\\\ y \n",
+    "x \\\\ y\n",
     "\\end{array}\\right] = 1\\;.\n",
     "$$\n",
     "\n",
-    "where we are giving data ($d=1$) and a linear operator $\\mathbf{F}=[1 \\; 2]$. "
+    "where we are giving data ($d=1$) and a linear operator $\\mathbf{F}=[1 \\; 2]$."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "589a806d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "8545e05e",
+   "id": "674b375d",
    "metadata": {},
    "source": [
     "Since $\\mathbf{F}$ does not have an inverse, we can instead solve the least-norm problem\n",
@@ -231,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7f7058a",
+   "id": "b2622335",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ed2d138",
+   "id": "b7cfa4fa",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>"
@@ -252,18 +255,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.16"
   }
  },
  "nbformat": 4,
