--- a/docs/case_study/background.ipynb
+++ b/docs/case_study/background.ipynb
@@ -1,9 +1,8 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "5d33bd04",
+   "id": "5e5c1009",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
@@ -20,7 +19,7 @@
     "Geological map and drillholes of the Flin Flon deposit. Outline of the main ore body (red) is shown for reference.\n",
     "```\n",
     "\n",
-    "The synthetic block model was generated from open-source data made available by [Natural Resouces Canada (NRCan)](https://ostrnrcan-dostrncan.canada.ca/entities/publication/73d767d8-ee1c-4bab-a2da-52dcf83faa06). The VMS deposit is hosted in rhyolite unit ...\n",
+    "The synthetic block model was generated from open-source data made available by [Natural Resources Canada (NRCan)](https://ostrnrcan-dostrncan.canada.ca/entities/publication/73d767d8-ee1c-4bab-a2da-52dcf83faa06). The VMS deposit is hosted in rhyolite unit ...\n",
     "\n",
     "```{figure} ./images/ore_body.png\n",
     "---\n",
@@ -31,7 +30,7 @@
     "```\n",
     "\n",
     " [Table 1](phys_prop) summarizes the relative physical properties of the main rock units in the area.\n",
-    "The VMS ore is expected to be more conductive and dense than the host rocks, as well as highly magnetic. This is contrast with the host rhyolite unit with low density, non-magnetic and highly resistive. The background mafic rocks are generally non-magnetic and have moderate densities and resistivities. A thick (40 m) overburden layer of relatively low density and  low resistivity covers the survey area. \n",
+    "The VMS ore is expected to be more conductive and dense than the host rocks, as well as highly magnetic. This is contrast with the host rhyolite unit with low density, non-magnetic and highly resistive. The background mafic rocks are generally non-magnetic and have moderate densities and resistivities. A thick (40 m) overburden layer of relatively low density and  low resistivity covers the survey area.\n",
     "\n",
     "\n",
     "```{table} Summary of expected physical properties\n",
@@ -56,18 +55,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
   }
  },
  "nbformat": 4,
