--- a/docs/case_study/introduction.ipynb
+++ b/docs/case_study/introduction.ipynb
@@ -2,31 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3f5d5563",
+   "id": "1c44846a",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
     "\n",
-    "# Case Studies\n",
+    "# Tutorials\n",
     "\n",
     "\n",
-    "```{figure} ./images/standalone_10clusters.png\n",
+    "```{figure} ./images/ore_body.png\n",
     "---\n",
-    "scale: 50%\n",
-    "align: right\n",
-    "name: standalone\n",
+    "height: 400px\n",
+    "name: ore_body\n",
     "---\n",
-    "Standalone physical property model.\n",
-    "```\n",
-    "\n",
-    "\n",
-    "```{figure} ./images/joint_10clusters.png\n",
-    "---\n",
-    "scale: 50%\n",
-    "align: right\n",
-    "name: joint\n",
-    "---\n",
-    "Joint physical property model.\n",
+    "Discrete geological model of the ore deposit and host units.\n",
     "```\n",
     "\n",
     "\n",
@@ -54,18 +43,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
   }
  },
  "nbformat": 4,
