--- a/docs/case_study/unconstrained_inversion.ipynb
+++ b/docs/case_study/unconstrained_inversion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d3b93c42",
+   "id": "6e6a9d3f",
    "metadata": {},
    "source": [
     "<p style=\"page-break-after:always;\"></p>\n",
@@ -14,10 +14,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6a66b9c",
+   "id": "323c7ec1",
    "metadata": {},
    "source": [
-    "## Magnetic vector inversion\n",
+    "## Magnetic inversion\n",
     "\n",
     "The airborne magnetic data were inverted over a range of uncertainties in order to achieve an adequate data fit. Following the smooth solution, a series of IRLS iterations were performed to recover an alternate, more compact model. The following figure shows sections through the recovered models and compares the observed and predicted data.\n",
     "\n",
@@ -34,102 +34,91 @@
     "\n",
     "We note a somewhat good correlation between the shape of the inferred ore shell and magnetic model. The magnetization appears to be shifted southward and at depth, as seen in profile.\n",
     "\n",
+    "[Add more here]\n",
     "\n",
-    "```{figure} ./images/mag_model_NS.PNG\n",
-    "---\n",
-    "height: 400px\n",
-    "name: mag_model_NS\n",
-    "---\n",
-    "(Top) Profile comparing the observed and predicted data along a North-South line directly above the central HF unit.\n",
-    "(Bottom) North-South section through the compact magnetization model directly below the data profile. Outline of the\n",
-    "hematite shell is shown in pink for reference.\n",
-    "```\n",
-    "\n",
-    "The strong magnetic response is likely due to a unit directly adjacent and below the jaspelite and hematite body.\n",
-    "\n",
-    "Results of this inversion can be found [here](https://mirageoscience-my.sharepoint.com/:u:/p/dominiquef/EQvvdryKs2ZJmmuqtl3mnukB3BX-dr2_FGwAc5gJtVgI7g?e=YYbof7).\n",
     "\n",
     "<p style=\"page-break-after:always;\"></p>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b8bca7e9",
+   "id": "f097a190",
+   "metadata": {},
+   "source": [
+    "## Ground gravity inversion\n",
+    "\n",
+    "The ground gravity data, reference terrain corrected at 2.67 g/cc, were also inverted in the same fashion. A floor uncertainty value of 0.05 mGal was assigned.\n",
+    "\n",
+    "\n",
+    "\n",
+    "```{figure} ./images/ground_grav_model_TOP.png\n",
+    "---\n",
+    "height: 400px\n",
+    "name: ground_grav_model_TOP\n",
+    "---\n",
+    "(Top) (left) Observed and (right) predicted gz data after convergence of the L2 (smooth) solution. Most of the data is well recovered.\n",
+    "\n",
+    "(Bottom) Horizontal slice for (left) the smooth and (right) L1-norm density contrast models.\n",
+    "```\n",
+    "\n",
+    "[Add more here]\n",
+    "\n",
+    "We note a slight correlation to the shape of the known ore body\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c02f5e4a",
    "metadata": {},
    "source": [
     "## Gravity gradiometry inversion\n",
     "\n",
-    "The airborne tensor terrain corrected (2.67 g/cc) gravity data were also inverted in the same fashion. A floor uncertainty value of 20 Eotvos was assigned to all the components.\n",
+    "The airborne tensor terrain corrected (2.67 g/cc) gravity data were also inverted in the same fashion. A floor uncertainty value of 0.2 Eotvos was assigned to all the components.\n",
     "\n",
     "\n",
     "\n",
-    "```{figure} ./images/grav_model_TOP.png\n",
+    "```{figure} ./images/grav_gradio_model_TOP.png\n",
     "---\n",
     "height: 400px\n",
-    "name: grav_model_TOP\n",
+    "name: grav_gradio_model_TOP\n",
     "---\n",
-    "(Top) (left) Observed and (right) predicted gzz data after convergence of the L2 (smooth) solution. Most of the data is well recovered.\n",
+    "(Top) (left) Observed and (right) predicted gxx data after convergence of the L2 (smooth) solution. Most of the data is well recovered.\n",
     "\n",
-    "(Bottom) Horizontal slice at 255 m elevation for (left) the smooth and (right) compact density contrast models. The outline of the inferred ore shell is shown in gray for reference.\n",
+    "(Bottom) Horizontal slice for (left) the smooth and (right) L1-norm density contrast models. The outline of the inferred ore shell is shown in gray for reference.\n",
     "```\n",
     "\n",
-    "We note a slight correlation to the shape of the inferred hematite body. We see little correlation with the jaspelite unit.\n",
+    "We note a slight correlation to the shape of the known ore body\n",
     "\n",
-    "\n",
-    "```{figure} ./images/grav_model_NS.png\n",
-    "---\n",
-    "height: 400px\n",
-    "name: grav_model_NS\n",
-    "---\n",
-    "(Top) Profile comparing the observed and predicted data along line passing roughly over the jaspelite unit.\n",
-    "(Bottom) North-South section through the compact density model. Outline of the\n",
-    "hematite shell is shown in pink for reference.\n",
-    "```\n",
-    "\n",
-    "The strong density response is likely due to a unit directly adjacent and below the jaspelite and hematite body.\n",
-    "\n",
-    "\n",
-    "Results of this inversion can be found [here](https://mirageoscience-my.sharepoint.com/:u:/p/dominiquef/Efv1bjHyiL1HqDnVMpyNyawBs4GxPgSCaYLfpqldbiJL8w?e=kG59gt).\n",
     "\n",
     "<p style=\"page-break-after:always;\"></p>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0840a309",
+   "id": "bc3d1b9b",
    "metadata": {},
    "source": [
-    "## Time-domain inversion\n",
+    "## Direct-current inversion\n",
     "\n",
-    "Inverting electromagnetic data continues to be challenging, both from a numerical and a practical standpoint. Solving differential equations at scale requires a large amount of computer resources, while practitioners also need to content with many numerical details that can affect the inversion process. Within the scope of this accelerated development project, Mira was mandated to help tackle both issues by implementing the user-interface and computational mechanism for the inversion of frequency and time-domain data.\n",
+    "The direct-current data are inverted with uncertainties assigned based on a background resistivity value, then converted to potentials.\n",
     "\n",
-    "```{figure} ./images/tem_ui.png\n",
-    "---\n",
-    "height: 400px\n",
-    "name: tem_ui\n",
-    "---\n",
-    "User interface created for time-domain inversion. Inversion mechanisms were developed for both airborne and ground (large-loop) systems.\n",
-    "```\n",
-    "\n",
-    "Several rounds of optimization and parallelization were applied to the SimPEG code base, reducing the runtime by a factor of four, roughly. For this project, computations were performed on Microsoft Azure cloud services.  The current runtime for the selected 750 sources, 15 time channels and 420k cells averages 1:40 hours per iteration (40 hours total) on a Standard HC44rs (44 vcpus, 352 GiB memory) node.\n",
+    "[Add details]\n",
     "\n",
     "The following figure shows the data fit and models recovered after convergence.\n",
     "\n",
-    "```{figure} ./images/res_model.png\n",
+    "```{figure} ./images/dc_model_TOP.png\n",
     "---\n",
     "height: 400px\n",
-    "name: res_model\n",
+    "name: dc_model_TOP.png\n",
     "---\n",
-    "(Left) Horizontal section at 240 m elevation through the compact density model. Outline of the hematite shell is shown in grey for reference.\n",
+    "(Top) (left) Observed and (right) predicted apparent resistivity data after convergence.\n",
     "\n",
-    "(Right)\n",
-    "(Top) Profile comparing the observed and predicted data along-line passing roughly over the jaspelite unit.\n",
-    "(Bottom) Vertical NS section through the recovered smooth resistivity model.\n",
+    "(Bottom)\n",
+    "(Left) Horizontal section at 240 m elevation through the compact density model. Outline of the hematite shell is shown in grey for reference.\n",
+    "(Right) Vertical NS section through the recovered smooth resistivity model.\n",
     "```\n",
     "\n",
-    "We note a large resistivity anomaly on the western portion of the model - likely due to IP. There is a identifiable correlation between the shape of the hematite and jaspelite and a recovered moderately resistive zone.\n",
-    "\n",
-    "Results of this inversion can be found [here](https://mirageoscience-my.sharepoint.com/:u:/p/dominiquef/EYSVKfs9aOJCpSKGJUBN6WMBWOTFa0dH7Jg6BRpRxVjnxg?e=a2kQKU).\n",
+    "We note a large contrast in conductivity in plan view, mostly limited as near-surface layer. This feature can be explained by the conductive tailings.\n",
     "\n",
     "<p style=\"page-break-after:always;\"></p>"
    ]
@@ -140,18 +129,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.16"
   }
  },
  "nbformat": 4,
