--- a/docs/inversion/data_misfit.ipynb
+++ b/docs/inversion/data_misfit.ipynb
@@ -50,9 +50,24 @@
    "id": "cd34675d",
    "metadata": {},
    "source": [
-    "![setup_plot](./images/setup_plot.png)\n",
+    "```{figure} ./images/setup_plot.png\n",
+    "---\n",
+    "height: 400px\n",
+    "---\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d77d2fa8",
+   "metadata": {},
+   "source": [
+    "```{figure} ./images/setup.png\n",
     "\n",
-    "![setup](./images/setup.png)"
+    "---\n",
+    "height: 400px\n",
+    "---\n",
+    "```"
    ]
   },
   {
@@ -169,6 +184,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
