Revert back. Remove figure with upper case PNG

--- a/docs/inversion/data_misfit.ipynb
+++ b/docs/inversion/data_misfit.ipynb
@@ -50,24 +50,9 @@
    "id": "cd34675d",
    "metadata": {},
    "source": [
-    "```{figure} ./images/setup_plot.png\n",
-    "---\n",
-    "height: 400px\n",
-    "---\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d77d2fa8",
-   "metadata": {},
-   "source": [
-    "```{figure} ./images/setup.png\n",
+    "![setup_plot](./images/setup_plot.png)\n",
     "\n",
-    "---\n",
-    "height: 400px\n",
-    "---\n",
-    "```"
+    "![setup](./images/setup.png)"
    ]
   },
   {
